--- a/package.json
+++ b/package.json
@@ -1,21 +1,43 @@
 {
   "name": "gymbuddy",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "axios": "^1.7.2",
     "expo": "~51.0.22",
+    "expo-blur": "~13.0.2",
+    "expo-checkbox": "~3.0.0",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.9",
+    "expo-image": "~1.12.13",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
+    "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.4",
+    "moment-timezone": "^0.5.45",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-gifted-charts": "^1.4.22",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-progress": "^5.0.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
